Dark Mode fixes

--- a/styles/elements/_fx.scss
+++ b/styles/elements/_fx.scss
@@ -31,6 +31,11 @@
 	box-shadow: 0 10px 15px #cccccc;
 	transform: rotate(-1.5deg) scale(1.15);
 	overflow: hidden;
+    // Dark Mode!
+    @media (prefers-color-scheme: dark) {
+        background-color: #666;
+        color: white;
+    }
 }
 .card {
     position: relative;
@@ -40,6 +45,12 @@
     padding: 10px;
     box-shadow: 0 10px 15px #cccccc;
     overflow: hidden;
+    // Dark Mode!
+    @media (prefers-color-scheme: dark) {
+        background-color: #2E3440;
+        color: white;
+        box-shadow: 0 10px 15px #000;
+    }
 }
 
 /* Micro.blog Card
